fixed large text overlapping

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -251,11 +251,12 @@ $checkmarkFat: 1px;
       margin-bottom: 15px;
     }
 
+
   }
   .col-12{
     padding: 0;
   }
-  .engineer-info-header h2{
-    width: 100%
+  .engineer-info-header h2, .engineer-info-text{
+    width: 75%
   }
 }
